--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SigmaGamingStudios</title>
@@ -13,8 +14,6 @@
             display: flex;
             flex-direction: column;
             align-items: center;
-            justify-content: center;
-            height: 100vh;
         }
         header {
             background: linear-gradient(135deg, #ff416c, #ff4b2b);
@@ -29,9 +28,23 @@
             text-transform: uppercase;
             letter-spacing: 0.1rem;
         }
+        nav {
+            margin: 20px 0;
+        }
+        nav a {
+            color: #ffffff;
+            text-decoration: none;
+            margin: 0 15px;
+            font-size: 1.2rem;
+            text-transform: uppercase;
+            transition: color 0.3s ease;
+        }
+        nav a:hover {
+            color: #ff4b2b;
+        }
         .container {
             text-align: center;
-            margin: 20px;
+            padding: 20px;
         }
         .container h2 {
             font-size: 2rem;
@@ -40,11 +53,11 @@
         .container p {
             font-size: 1.2rem;
             line-height: 1.5;
+            margin-bottom: 20px;
         }
         .btn {
             display: inline-block;
             padding: 10px 20px;
-            margin-top: 20px;
             font-size: 1rem;
             color: #ffffff;
             background: #ff416c;
@@ -57,16 +70,100 @@
         .btn:hover {
             background: #ff4b2b;
         }
+        .games {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+            gap: 20px;
+            margin: 20px 0;
+        }
+        .game-card {
+            background: #2a2a3d;
+            border-radius: 10px;
+            overflow: hidden;
+            width: 300px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+            transition: transform 0.3s ease;
+        }
+        .game-card:hover {
+            transform: scale(1.05);
+        }
+        .game-card img {
+            width: 100%;
+            height: auto;
+        }
+        .game-card-content {
+            padding: 15px;
+            text-align: left;
+        }
+        .game-card-content h3 {
+            margin: 0 0 10px;
+            font-size: 1.5rem;
+        }
+        .game-card-content p {
+            margin: 0;
+            font-size: 1rem;
+            line-height: 1.4;
+        }
+        .social {
+            margin: 20px 0;
+            display: flex;
+            justify-content: center;
+            gap: 20px;
+        }
+        .social a {
+            color: #ffffff;
+            font-size: 1.5rem;
+            transition: color 0.3s ease;
+        }
+        .social a:hover {
+            color: #ff4b2b;
+        }
     </style>
 </head>
 <body>
     <header>
         <h1>SigmaGamingStudios</h1>
     </header>
+    <nav>
+        <a href="#">Home</a>
+        <a href="#">About</a>
+        <a href="#">Games</a>
+        <a href="#">Contact</a>
+    </nav>
     <div class="container">
         <h2>Welcome to SigmaGamingStudios</h2>
         <p>At SigmaGamingStudios, we create immersive and engaging gaming experiences. Our team of passionate developers and designers work tirelessly to bring you the best in gaming entertainment.</p>
         <button class="btn">Learn More</button>
+    </div>
+    <div class="games">
+        <div class="game-card">
+            <img src="https://via.placeholder.com/300x200" alt="Game 1">
+            <div class="game-card-content">
+                <h3>Game Title 1</h3>
+                <p>Experience the ultimate adventure with Game Title 1. A world of excitement awaits you.</p>
+            </div>
+        </div>
+        <div class="game-card">
+            <img src="https://via.placeholder.com/300x200" alt="Game 2">
+            <div class="game-card-content">
+                <h3>Game Title 2</h3>
+                <p>Get ready for an epic journey in Game Title 2. Challenges and fun are guaranteed.</p>
+            </div>
+        </div>
+        <div class="game-card">
+            <img src="https://via.placeholder.com/300x200" alt="Game 3">
+            <div class="game-card-content">
+                <h3>Game Title 3</h3>
+                <p>Join the action in Game Title 3. Discover new worlds and meet incredible characters.</p>
+            </div>
+        </div>
+    </div>
+    <div class="social">
+        <a href="#"><i class="fab fa-facebook"></i></a>
+        <a href="#"><i class="fab fa-twitter"></i></a>
+        <a href="#"><i class="fab fa-instagram"></i></a>
+        <a href="#"><i class="fab fa-youtube"></i></a>
     </div>
 </body>
 </html>
