--- a/index.html
+++ b/index.html
@@ -1,135 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SigmaGamingStudios</title>
-    <style>
-        body {
-            margin: 0;
-            font-family: 'Arial', sans-serif;
-            background: #1e1e2f;
-            color: #ffffff;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-        }
-        header {
-            background: linear-gradient(135deg, #ff416c, #ff4b2b);
-            padding: 20px;
-            width: 100%;
-            text-align: center;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-        }
-        header h1 {
-            margin: 0;
-            font-size: 2.5rem;
-            text-transform: uppercase;
-            letter-spacing: 0.1rem;
-        }
-        nav {
-            margin: 20px 0;
-        }
-        nav a {
-            color: #ffffff;
-            text-decoration: none;
-            margin: 0 15px;
-            font-size: 1.2rem;
-            text-transform: uppercase;
-            transition: color 0.3s ease;
-        }
-        nav a:hover {
-            color: #ff4b2b;
-        }
-        .container {
-            text-align: center;
-            padding: 20px;
-        }
-        .container h2 {
-            font-size: 2rem;
-            margin-bottom: 10px;
-        }
-        .container p {
-            font-size: 1.2rem;
-            line-height: 1.5;
-            margin-bottom: 20px;
-        }
-        .btn {
-            display: inline-block;
-            padding: 10px 20px;
-            font-size: 1rem;
-            color: #ffffff;
-            background: #ff416c;
-            border: none;
-            border-radius: 5px;
-            text-transform: uppercase;
-            cursor: pointer;
-            transition: background 0.3s ease;
-        }
-        .btn:hover {
-            background: #ff4b2b;
-        }
-        .games {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: center;
-            gap: 20px;
-            margin: 20px 0;
-        }
-        .game-card {
-            background: #2a2a3d;
-            border-radius: 10px;
-            overflow: hidden;
-            width: 300px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-            transition: transform 0.3s ease;
-        }
-        .game-card:hover {
-            transform: scale(1.05);
-        }
-        .game-card img {
-            width: 100%;
-            height: auto;
-        }
-        .game-card-content {
-            padding: 15px;
-            text-align: left;
-        }
-        .game-card-content h3 {
-            margin: 0 0 10px;
-            font-size: 1.5rem;
-        }
-        .game-card-content p {
-            margin: 0;
-            font-size: 1rem;
-            line-height: 1.4;
-        }
-        .social {
-            margin: 20px 0;
-            display: flex;
-            justify-content: center;
-            gap: 20px;
-        }
-        .social a {
-            color: #ffffff;
-            font-size: 1.5rem;
-            transition: color 0.3s ease;
-        }
-        .social a:hover {
-            color: #ff4b2b;
-        }
-    </style>
+    <title>SigmaGamingStudios - Home</title>
+    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 </head>
 <body>
     <header>
         <h1>SigmaGamingStudios</h1>
     </header>
     <nav>
-        <a href="#">Home</a>
-        <a href="#">About</a>
-        <a href="#">Games</a>
-        <a href="#">Contact</a>
+        <a href="index.html">Home</a>
+        <a href="about.html">About</a>
+        <a href="games.html">Games</a>
+        <a href="contact.html">Contact</a>
     </nav>
     <div class="container">
         <h2>Welcome to SigmaGamingStudios</h2>
