--- a/contact.html
+++ b/contact.html
@@ -27,11 +27,14 @@
             <input type="email" id="email" name="email" required>
             <label for="message">Message:</label>
             <textarea id="message" name="message" required></textarea>
-            <button type="submit" class="btn">Send Message</button>
+            <button type="submit" class="btn"><i class="fas fa-paper-plane"></i> Send Message</button>
         </form>
     </div>
     <div class="social">
         <a href="#"><i class="fab fa-facebook"></i></a>
         <a href="#"><i class="fab fa-twitter"></i></a>
         <a href="#"><i class="fab fa-instagram"></i></a>
-        <a href="#"><i class
+        <a href="#"><i class="fab fa-youtube"></i></a>
+    </div>
+</body>
+</html>
