--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@
     <div class="container">
         <h2>Contact Us</h2>
         <p>We'd love to hear from you! Whether you have questions, feedback, or just want to say hi, feel free to reach out to us.</p>
-        <form>
+        <form action="https://formspree.io/greeningsiren@gmail.com" method="POST">
             <label for="name">Name:</label>
             <input type="text" id="name" name="name" required>
             <label for="email">Email:</label>
